--- a/index.html
+++ b/index.html
@@ -12,27 +12,36 @@
 
 <body>
    <header>
-      <h1 id="logo">dev.finance$</h1>
+      <img src="./assets/logo.svg" alt="Logo Dev Finance">
    </header>
 
    <main class="container">
       <section id="balance">
-         <h2>Balanço</h2>
+         <h2 class="sr-only">Balanço</h2>
 
          <div class="card">
-            <h3>Entradas</h3>
+            <h3>
+               <span>Entradas</span>
+               <img src="./assets/income.svg" alt="Imagem de entradas">
+            </h3>
             <p>R$ 5.000,00</p>
          </div>
          <!-- card -->
 
          <div class="card">
-            <h3>Saídas</h3>
+            <h3>
+               <span>Saídas</span>
+               <img src="./assets/expense.svg" alt="Imagem de saídas">
+            </h3>
             <p>R$ 2.000,00</p>
          </div>
          <!-- card -->
 
          <div class="card total">
-            <h3>Total</h3>
+            <h3>
+               <span>Total</span>
+               <img src="./assets/total.svg" alt="Imagem de total">
+            </h3>
             <p>R$ 3.000,00</p>
          </div>
          <!-- card -->
@@ -41,7 +50,9 @@
       <!-- balance -->
 
       <section id="transactions">
-         <h2>Transações</h2>
+         <h2 class="sr-only">Transações</h2>
+
+         <a href="#" onclick="Modal.open()" class="button new">+ Nova Transação</a>
 
          <table id="data-table">
             <thead>
@@ -49,6 +60,7 @@
                   <th>Descricão</th>
                   <th>Valor</th>
                   <th>Data</th>
+                  <th></th>
                </tr>
             </thead>
 
@@ -57,18 +69,27 @@
                   <td class="description">Luz</td>
                   <td class="expense">- R$ 500,00</td>
                   <td class="date">24/01/2021</td>
+                  <td>
+                     <img src="./assets/minus.svg" alt="Remover transação">
+                  </td>
                </tr>
 
                <tr>
                   <td class="description">Criação website</td>
                   <td class="income">R$ 5.000,00</td>
                   <td class="date">29/01/2021</td>
+                  <td>
+                     <img src="./assets/minus.svg" alt="Remover transação">
+                  </td>
                </tr>
 
                <tr>
                   <td class="description">Internet</td>
                   <td class="expense">- R$ 100,00</td>
                   <td class="date">30/01/2021</td>
+                  <td>
+                     <img src="./assets/minus.svg" alt="Remover transação">
+                  </td>
                </tr>
             </tbody>
 
@@ -81,9 +102,86 @@
    </main>
    <!-- container -->
 
+   <div class="modal-overlay">
+      <div class="modal">
+         <div id="form">
+            <h2>Nova Transação</h2>
+            <form action="">
+               <div class="input-group">
+                  <label 
+                     class="sr-only" 
+                     for="description">
+                  </label>
+                  <input 
+                     id="description" 
+                     type="text" 
+                     name="description" 
+                     placeholder="Descrição"
+                  />
+               </div>
+               <!-- input-group -->
+
+               <div class="input-group">
+                  <label 
+                     class="sr-only" 
+                     for="amount">Valor </label>
+                  <input 
+                     id="amount" 
+                     type="number" 
+                     step="0.01"
+                     name="amount" 
+                     placeholder="0,00"
+                  />
+                  <small class="help">
+                     Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais
+                  </small>
+               </div>
+               <!-- input-group -->
+
+               <div class="input-group">
+                  <label 
+                     class="sr-only" 
+                     for="date">Valor </label>
+                  <input 
+                     id="date" 
+                     type="date" 
+                     name="date" 
+                  />
+               </div>
+               <!-- input-group -->
+
+               <div class="input-group actions">
+                  <a href="#" onclick="Modal.close();" class="button cancel">Cancelar</a>
+
+                  <button>Salvar</button>
+               </div>
+               <!-- input-group -->
+            </form>
+         </div>
+         <!-- form -->
+      </div>
+      <!-- modal -->
+   </div>
+   <!-- modal-overlay -->
+
    <footer>
-      <p>dev.finance$</p>
+      <p>dev.finance$ - 2021</p>
    </footer>
+
+   <script>
+      const Modal = {
+         open(){
+            document
+               .querySelector('.modal-overlay')
+               .classList.add('active')
+         },
+         close(){
+            document
+               .querySelector('.modal-overlay')
+               .classList.remove('active')
+         }
+      }
+   </script>
 </body>
 
 </html>
