--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="preconnect" href="https://fonts.gstatic.com">
-   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap" rel="stylesheet">
+   <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap"
+      rel="stylesheet">
    <link rel="stylesheet" href="./style.css">
+   <link rel="shortcut icon" href="./assets/ico.svg">
    <title>dev.finance$</title>
 </head>
 
@@ -24,7 +27,7 @@
                <span>Entradas</span>
                <img src="./assets/income.svg" alt="Imagem de entradas">
             </h3>
-            <p>R$ 5.000,00</p>
+            <p id="incomeDisplay">R$ 5.000,00</p>
          </div>
          <!-- card -->
 
@@ -33,7 +36,7 @@
                <span>Saídas</span>
                <img src="./assets/expense.svg" alt="Imagem de saídas">
             </h3>
-            <p>R$ 2.000,00</p>
+            <p id="expenseDisplay">R$ 2.000,00</p>
          </div>
          <!-- card -->
 
@@ -42,7 +45,7 @@
                <span>Total</span>
                <img src="./assets/total.svg" alt="Imagem de total">
             </h3>
-            <p>R$ 3.000,00</p>
+            <p id="totalDisplay">R$ 3.000,00</p>
          </div>
          <!-- card -->
 
@@ -52,7 +55,7 @@
       <section id="transactions">
          <h2 class="sr-only">Transações</h2>
 
-         <a href="#" onclick="Modal.open()" class="button new">+ Nova Transação</a>
+         <a href="#" onclick="Modal.open()" class="button new">+ Adicionar Transação</a>
 
          <table id="data-table">
             <thead>
@@ -65,32 +68,6 @@
             </thead>
 
             <tbody>
-               <tr>
-                  <td class="description">Luz</td>
-                  <td class="expense">- R$ 500,00</td>
-                  <td class="date">24/01/2021</td>
-                  <td>
-                     <img src="./assets/minus.svg" alt="Remover transação">
-                  </td>
-               </tr>
-
-               <tr>
-                  <td class="description">Criação website</td>
-                  <td class="income">R$ 5.000,00</td>
-                  <td class="date">29/01/2021</td>
-                  <td>
-                     <img src="./assets/minus.svg" alt="Remover transação">
-                  </td>
-               </tr>
-
-               <tr>
-                  <td class="description">Internet</td>
-                  <td class="expense">- R$ 100,00</td>
-                  <td class="date">30/01/2021</td>
-                  <td>
-                     <img src="./assets/minus.svg" alt="Remover transação">
-                  </td>
-               </tr>
             </tbody>
 
          </table>
@@ -102,36 +79,26 @@
    </main>
    <!-- container -->
 
+   <div class="dark-mode-btn">
+      <span></span>
+   </div>
+   <!-- dark-mode-btn -->
+
    <div class="modal-overlay">
       <div class="modal">
          <div id="form">
             <h2>Nova Transação</h2>
-            <form action="">
+            <form action="" onsubmit="Form.submit(event)">
                <div class="input-group">
-                  <label 
-                     class="sr-only" 
-                     for="description">
+                  <label class="sr-only" for="description">
                   </label>
-                  <input 
-                     id="description" 
-                     type="text" 
-                     name="description" 
-                     placeholder="Descrição"
-                  />
+                  <input id="description" type="text" name="description" placeholder="Descrição" />
                </div>
                <!-- input-group -->
 
                <div class="input-group">
-                  <label 
-                     class="sr-only" 
-                     for="amount">Valor </label>
-                  <input 
-                     id="amount" 
-                     type="number" 
-                     step="0.01"
-                     name="amount" 
-                     placeholder="0,00"
-                  />
+                  <label class="sr-only" for="amount">Valor </label>
+                  <input id="amount" type="number" step="0.01" name="amount" placeholder="0,00" />
                   <small class="help">
                      Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais
                   </small>
@@ -139,14 +106,8 @@
                <!-- input-group -->
 
                <div class="input-group">
-                  <label 
-                     class="sr-only" 
-                     for="date">Valor </label>
-                  <input 
-                     id="date" 
-                     type="date" 
-                     name="date" 
-                  />
+                  <label class="sr-only" for="date">Valor </label>
+                  <input id="date" type="date" name="date" />
                </div>
                <!-- input-group -->
 
@@ -168,20 +129,8 @@
       <p>dev.finance$ - 2021</p>
    </footer>
 
-   <script>
-      const Modal = {
-         open(){
-            document
-               .querySelector('.modal-overlay')
-               .classList.add('active')
-         },
-         close(){
-            document
-               .querySelector('.modal-overlay')
-               .classList.remove('active')
-         }
-      }
-   </script>
+   <script src="./scripts/darkmode.js"></script>
+   <script src="./scripts/transaction.js"></script>
 </body>
 
 </html>
